--- a/.github/workflows/build-caddy.yml
+++ b/.github/workflows/build-caddy.yml
@@ -27,7 +27,7 @@ env:
     github.com/caddy-dns/cloudflare
     github.com/mholt/caddy-webdav
     github.com/mholt/caddy-l4
-    github.com/abiosoft/caddy-exec
+    github.com/abiosoft/caddy-exec=github.com/kkkykin/caddy-exec@payload
     github.com/abiosoft/caddy-json-parse
 
 jobs:
