--- a/.github/workflows/build-caddy.yml
+++ b/.github/workflows/build-caddy.yml
@@ -31,7 +31,7 @@ env:
     github.com/mholt/caddy-webdav
     github.com/mholt/caddy-l4
     github.com/abiosoft/caddy-exec=github.com/kkkykin/caddy-exec@payload
-    github.com/abiosoft/caddy-json-parse
+    github.com/abiosoft/caddy-json-parse=github.com/kkkykin/caddy-json-parse
     github.com/kkkykin/caddy-aria2
     github.com/corazawaf/coraza-caddy
     github.com/mholt/caddy-ratelimit
