--- a/.github/workflows/build-caddy.yml
+++ b/.github/workflows/build-caddy.yml
@@ -37,6 +37,7 @@ env:
     github.com/mholt/caddy-ratelimit
     github.com/kkkykin/caddy-random
     github.com/Javex/caddy-fail2ban
+    github.com/shift72/caddy-geo-ip
 
 jobs:
   prepare:
